Removí la sección de Services completamente, y estoy explorando cómo cambiar el layout de portafolio

--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
@@ -83,12 +80,12 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Industrial Design Engineer</div>
                 <div class="intro-heading">MARCE.AMSA</div>
-                <a href="#services" class="page-scroll btn btn-xl">About me</a>
+        
             </div>
         </div>
     </header>
 
-    <!-- Services Section -->
+    <!-- Services Section 
     <section id="services">
         <div class="container">
             <div class="row">
@@ -124,7 +121,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio" class="bg-light-gray">
