Se cambia el estilo de letra de italiz a light en el área del caption del portafolio, estoy explorando las variables de agency.css que es el que está definiendo toda la cáscara estética de la pantalla.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Social</a>
+                        <a class="page-scroll" href="#team">Publications</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -191,7 +191,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Migo</h4>
-                        <p class="text-muted">Comunication Design</p>
+                        <p class="text-muted">Comunication/Product Design</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -218,7 +218,7 @@
                         <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Programing projects</h4>
+                        <h4>Programming projects</h4>
                         <p class="text-muted">Processing</p>
                     </div>
                 </div>
