--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Amsa</a>
+                <a class="navbar-brand page-scroll" href="#page-top">AMSA</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
