Arreglé el nav bar, sólo falta definir de dónde se genera el cuadro gris claro. Cambié el tamaño de la foto para que se ajustara

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">I'm a Industrial Design Engineer who loves Interaction Design. My focus is to find ways to blend the digital and the physical world, for that reason I love making data visible and interaction tangible.</p>
                 </div>
             </div>
         </div>
@@ -378,7 +378,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                        <img src="mg/logos/pulse.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -395,8 +395,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Send me a mail!</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Send me a mail</h2>
+                    <h3 class="section-subheading text-muted">Is always nice to know new people with cool ideas.</h3>
                 </div>
             </div>
             <div class="row">
