--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/adello.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
@@ -378,7 +378,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="mg/logos/pulse.jpg" class="img-responsive img-centered" alt="">
+                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
